Shader compilation and fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,5 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
 elseif(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
   target_compile_definitions(huedra PRIVATE -DNDEBUG)
 elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
-  target_compile_definitions(huedra PRIVATE -DNDEBUG)
+  target_compile_definitions(huedra PRIVATE -DDEBUG)
 endif()
