Loading of obj mesh files and assets folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ file(GLOB_RECURSE SOURCES
 
 add_executable(huedra ${SOURCES})
 
+find_package(Python3 REQUIRED)
+
 find_package(Vulkan REQUIRED)
 
 if(VULKAN_FOUND)
@@ -33,14 +35,23 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
   target_compile_definitions(huedra PRIVATE -DDEBUG)
 endif()
 
-# Copy assets
-set(source_assets ${PROJECT_SOURCE_DIR}/shaders)
-set(dest_assets ${PROJECT_BINARY_DIR}/shaders)
+set(source_assets ${PROJECT_SOURCE_DIR}/assets)
+set(dest_assets ${PROJECT_BINARY_DIR}/assets)
+set(shader_dir ${source_assets}/shaders)
 
+# Compile shaders
+add_custom_target(compile_shaders ALL
+  COMMAND ${Python3_EXECUTABLE} compile.py
+  WORKING_DIRECTORY ${shader_dir}
+  COMMENT "Compiling shaders"
+)
+
+# Copy assets
 add_custom_target(copy_assets ALL
     COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
     ${source_assets} ${dest_assets}
     COMMENT "Copying assets to build folder"
 )
 
+add_dependencies(copy_assets compile_shaders)
 add_dependencies(huedra copy_assets)
